--- a/package.json
+++ b/package.json
@@ -4,22 +4,38 @@
   "description": "Backend for the Resume As a Service",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "plop": "plop"
+    "jest": "jest",
+    "mocha": "mocha || true",
+    "plop": "plop",
+    "nodemon": "nodemon index.js",
+    "test-register": "node ./test/firebase/signUpUser.js",
+    "test-login": "node ./test/firebase/signInUser.js"
   },
   "author": "Ilia Pirozhenko <ilia@ipirozhenko.com>",
   "license": "UNLICENSED",
   "dependencies": {
     "@google-cloud/storage": "^4.3.1",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.7-alpha.3",
+    "firebase": "^7.14.3",
+    "firebase-admin": "^8.12.1",
     "handlebars": "^4.7.3",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^7.1.2",
+    "mongoose": "^5.9.13",
+    "mongoose-jumblator": "^1.2.2",
     "object-hash": "^2.0.2",
     "puppeteer": "^2.1.1",
     "serverless-google-cloudfunctions": "^2.3.3"
   },
   "devDependencies": {
     "jest": "^25.1.0",
+    "nodemon": "^2.0.3",
     "plop": "^2.6.0"
   }
 }
