--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "jest": "jest",
-    "mocha": "mocha || true",
+    "mocha": "mocha --timeout 10000 || true",
     "plop": "plop",
     "nodemon": "nodemon index.js",
     "test-register": "node ./test/firebase/signUpUser.js",
