--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mongoose-jumblator": "^1.2.3",
     "object-hash": "^2.0.2",
     "puppeteer": "^2.1.1",
-    "serverless-google-cloudfunctions": "^2.3.3"
+    "serverless-google-cloudfunctions": "^2.3.3",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
     "jest": "^25.1.0",
