--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "index.js",
   "scripts": {
     "jest": "jest",
-    "mocha": "mocha --timeout 50000 || true",
+    "mocha": "mocha --timeout 50000 --reporter mochawesome",
+    "marge": "marge",
     "plop": "plop",
-    "nodemon": "nodemon index.js",
-    "test-register": "node ./test/firebase/signUpUser.js",
-    "test-login": "node ./test/firebase/signInUser.js"
+    "dev": "nodemon server/server-dev.js"
   },
   "author": "Ilia Pirozhenko <ilia@ipirozhenko.com>",
   "license": "UNLICENSED",
@@ -36,6 +35,7 @@
   },
   "devDependencies": {
     "jest": "^25.1.0",
+    "mochawesome": "^6.1.1",
     "nodemon": "^2.0.3",
     "plop": "^2.6.0"
   }
